# internal/app/apiserver/apiserver.go
@@ -71,20 +71,42 @@ func (s *APIServer) configureEndpoints() {
 		path.POST("/servicetype", endpoint.PostServiceType)
 		path.DELETE("/servicetype/:id", endpoint.DeleteServiceType)
 
-		path.POST("/company", endpoint.PostCompany)
-		path.GET("/company/:id", endpoint.GetCompany)
-		path.GET("/company/:id/services", endpoint.GetServices)
-		path.DELETE("/company/:company_id/service/:service_id", endpoint.DeleteService)
-		path.GET("/companies/reviews/:id", endpoint.GetCompanyReviews)
-		path.GET("/companies/review/:id", endpoint.GetCompanyReview)
-		path.POST("/companies/review", endpoint.PostCompanyReview)
-		path.DELETE("/companies/review/:id", endpoint.DeleteCompanyReview)
+		// path.POST("/company", endpoint.PostCompany)
+		// path.GET("/company/:id", endpoint.GetCompany)
+		// path.GET("/company/:id/services", endpoint.GetServices)
+		// path.DELETE("/company/:company_id/service/:service_id", endpoint.DeleteService)
+		// path.GET("/companies/reviews/:id", endpoint.GetCompanyReviews)
+		// path.GET("/companies/review/:id", endpoint.GetCompanyReview)
+		// path.POST("/companies/review", endpoint.PostCompanyReview)
+		// path.DELETE("/companies/review/:id", endpoint.DeleteCompanyReview)
 
-		path.GET("/service", endpoint.PostService)
-		path.GET("/service/reviews/:id", endpoint.GetServiceReviews)
-		path.GET("/service/review/:id", endpoint.GetServiceReview)
-		path.POST("/service/review", endpoint.PostServiceReview)
-		path.DELETE("/service/review/:id", endpoint.DeleteServiceReview)
+		// path.GET("/service", endpoint.PostService)
+		// path.GET("/service/reviews/:id", endpoint.GetServiceReviews)
+		// path.GET("/service/review/:id", endpoint.GetServiceReview)
+		// path.POST("/service/review", endpoint.PostServiceReview)
+		// path.DELETE("/service/review/:id", endpoint.DeleteServiceReview)
+
+		path.GET("/companies", endpoint.GetCompanies)
+		company := path.Group("/company")
+		{
+			company.POST("", endpoint.PostCompany)
+			company.GET("/:company_id", endpoint.GetCompany)
+			company.DELETE("/:company_id", endpoint.DeleteCompany)
+
+			company.POST("/:company_id/service", endpoint.PostService)
+			company.GET("/:company_id/services", endpoint.GetServices)
+			company.GET("/service/:service_id", endpoint.GetService)
+			company.DELETE("/:company_id/service/:service_id", endpoint.DeleteService)
+			company.POST("/service/:service_id/review", endpoint.PostServiceReview)
+			company.GET("/service/:service_id/reviews", endpoint.GetServiceReviews)
+			company.GET("/service/review/:review_id", endpoint.GetServiceReview)
+			company.DELETE("/:company_id/service/:service_id/review/:id", endpoint.DeleteServiceReview)
+
+			company.POST("/:company_id/review", endpoint.PostCompanyReview)
+			company.GET("/:company_id/reviews", endpoint.GetCompanyReviews)
+			company.GET("/review/:review_id", endpoint.GetCompanyReview)
+			company.DELETE("/review/:review_id", endpoint.DeleteCompanyReview)
+		}
 
 		// path.GET("/review/:id", endpoint.GetServiceType)
 		// path.GET("/review", endpoint.GetServiceTypes)
