# internal/app/apiserver/dtos/servicedto.go
@@ -7,35 +7,34 @@ import (
 )
 
 type CreateServiceDto struct {
-	CompanyID     int     `json:"company_id" validate:"required"`
 	ServiceTypeID int     `json:"service_type_id" validate:"required"`
 	Text          string  `json:"text" validate:"required"`
 	Price         float32 `json:"price" validate:"required"`
 }
-type ServiceDetails struct {
+type ServiceResponse struct {
 	ID int `json:"id"`
 	CompanyID int `json:"company_id"`
-	ServiceTypeID int `json:"service_type_id"`
+	ServiceType model.ServiceType `json:"service_type"`
 	Text string `json:"text"`
 	Price float32 `json:"price"`
 	CreatedAt time.Time `json:"created_at"`
 	UpdatedAt time.Time `json:"updated_at"`
 }
 
-func (t *CreateServiceDto) ToModel() model.Service {
+func (t *CreateServiceDto) ToModel(company_id int) model.Service {
 	return model.Service{
-		Company: model.Company{ID : t.CompanyID},
+		Company: model.Company{ID : company_id},
 		ServiceType: model.ServiceType{ID : t.ServiceTypeID},
 		Text: t.Text,
 		Price: t.Price,
 	}
 }
 
-func ServiceToDto(m model.Service) ServiceDetails {
-	return ServiceDetails{
+func ModelServiceToResponse(m model.Service) ServiceResponse {
+	return ServiceResponse{
 		ID: m.ID,
 		CompanyID: m.Company.ID,
-		ServiceTypeID: m.ServiceType.ID,
+		ServiceType: m.ServiceType,
 		Text: m.Text,
 		Price: m.Price,
 		CreatedAt: m.CreatedAt,
